@@ -367,12 +367,18 @@ END_EXTERN_C()
 #define PHP_RINIT		ZEND_MODULE_ACTIVATE_N
 #define PHP_RSHUTDOWN	ZEND_MODULE_DEACTIVATE_N
 #define PHP_MINFO		ZEND_MODULE_INFO_N
+#define PHP_GINIT		ZEND_GINIT
+#define PHP_GSHUTDOWN	ZEND_GSHUTDOWN
 
 #define PHP_MINIT_FUNCTION		ZEND_MODULE_STARTUP_D
 #define PHP_MSHUTDOWN_FUNCTION	ZEND_MODULE_SHUTDOWN_D
 #define PHP_RINIT_FUNCTION		ZEND_MODULE_ACTIVATE_D
 #define PHP_RSHUTDOWN_FUNCTION	ZEND_MODULE_DEACTIVATE_D
 #define PHP_MINFO_FUNCTION		ZEND_MODULE_INFO_D
+#define PHP_GINIT_FUNCTION		ZEND_GINIT_FUNCTION
+#define PHP_GSHUTDOWN_FUNCTION	ZEND_GSHUTDOWN_FUNCTION
+ 
+#define PHP_MODULE_GLOBALS		ZEND_MODULE_GLOBALS
 
 
 /* Output support */
